# cycu_oop_11022148

./: 0161000900.csv  0161001500_stops.csv  LICENSE  README.md  all_data.csv  bus_stops_0161000900.csv  unknown_times.csv
20250311/: 123.xlsx  Exercise 2 2.py  Exercise 2.py  Exercise 3.py
20250325/: ExchangeRate@202503251900.csv  ExchangeRate_Cleaned.csv  Exercise 2.py  Exercise 3.py
20250401/: Excercise 2.py  Excercise 3.py  Excercise.py  bus_stop_129828.html  bus_stop_129829.html  bus_stop_218023.html  bus_stop_36021.html  bus_stop_36022.html  bus_stop_36023.html  bus_stop_36024.html  bus_stop_36025.html  bus_stop_36026.html  bus_stop_36027.html  bus_stop_36028.html  bus_stop_36029.html  bus_stop_36030.html  bus_stop_36031.html  bus_stop_36032.html  bus_stop_36033.html  bus_stop_36034.html  bus_stop_36036.html  bus_stop_36038.html  bus_stop_36039.html  bus_stop_36040.html  bus_stop_36041.html  bus_stop_36042.html  bus_stop_36043.html  bus_stop_36044.html  bus_stop_36045.html  bus_stop_36047.html  bus_stop_36048.html  bus_stop_36049.html  bus_stop_36050.html  bus_stop_36051.html  bus_stop_36052.html  bus_stop_36053.html  bus_stop_36054.html  bus_stop_36055.html  bus_stop_36056.html  bus_stop_36057.html  (+63 more)
20250408/: Exercise 1.py  Exercise 2.py  Exercise 3.py
20250422/: bus_fun.py  bus_sin基隆路.py  bus_sin承德.py  call_fun.py  plot_bus_stops.py
20250429/: 2.py  ebus_taipai.py
20250506/: pyproject.toml  test_my_classmate.py
20250506/src/cycu_11022148/: hw.py
20250513/: pyproject.toml  test.py
20250513/src/cycu11022148/: ebus_map.py
20250520/: half.py  score.py  students_half_fail.csv  taipei_data.py
