[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cycu11022148"
version = "2025.05.06"
description = "A short description of the cycu11022148 package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name="WU BING CHEN", email="wayne185185@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4==4.13.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "numpy==2.2.5",
    "packaging==25.0",
    "pillow==11.2.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.7",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0"
]

[project.urls]
"Homepage" = "https://your-homepage-url.com"
"Source" = "https://github.com/your-username/your-repo"